--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -56,8 +56,8 @@ weight = 3
 
 [[footer]]
 name = "Technical Editing"
+url = "technical-editing/"
 weight = 4
-pageRef = "technical-editing/"
 
 [[footer]]
 name = "Publications"
@@ -65,16 +65,21 @@ url = "publications/"
 weight = 5
 
 [[footer]]
+name = "Portfolio"
+url = "te-portfolio/"
+weight = 6
+
+[[footer]]
 name = "Newsletter"
 url = "https://yarnboundtales.substack.com/"
-weight = 6
+weight = 7
 
 [[footer]]
 name = "Privacy Policy"
 url = "privacy-policy/"
-weight = 7
+weight = 8
 
 [[footer]]
 name = "Impressum"
 url = "impressum/"
-weight = 8
+weight = 9
