--- a/config/_default/menus.hu.toml
+++ b/config/_default/menus.hu.toml
@@ -3,27 +3,44 @@
 # main menu
 [[main]]
 name = "Főoldal"
-url = "/"
+url = "/hu/"
 weight = 1
 
 [[main]]
 name = "Rólam"
-url = "about/"
+url = "/hu/about/"
 weight = 2
 
 [[main]]
 name = "Műfordítás & szerkesztés"
-url = "translation-and-editing/"
+url = "/hu/translation-and-editing/"
 weight = 3
 
 [[main]]
-name = "Szakmai lektorálás"
-url = "technical-editing/"
+name = "Szaklektorálás"
 weight = 4
 
 [[main]]
+parent = "Szaklektorálás"
+name = "Info"
+url = "/hu/technical-editing/"
+weight = 1
+
+[[main]]
+parent = "Szaklektorálás"
+name = "Lektorált mintáim"
+url = "/hu/te-portfolio/"
+weight = 2
+
+[[main]]
+parent = "Szaklektorálás"
+name = "Magánprojektjeim"
+url = "/hu/my-knitting-projects/"
+weight = 3
+
+[[main]]
 name = "Publikációk"
-url = "publications/"
+url = "/hu/publications/"
 weight = 5
 
 
@@ -32,40 +49,50 @@ weight = 5
 
 [[footer]]
 name = "Főoldal"
-url = "/"
+url = "/hu/"
 weight = 1
 
 [[footer]]
 name = "Rólam"
-url = "about/"
+url = "/hu/about/"
 weight = 2
 
 [[footer]]
 name = "Műfordítás és szerkesztés"
-url = "translation-and-editing/"
+url = "/hu/translation-and-editing/"
 weight = 3
 
 [[footer]]
 name = "Szakmai lektorálás"
+url = "/hu/technical-editing/"
 weight = 4
-pageRef = "technical-editing/"
+
+[[footer]]
+name = "Lektorált mintáim"
+url = "/hu/te-portfolio/"
+weight = 5
+
+[[footer]]
+name = "Magánprojektjeim"
+url = "/hu/my-knitting-projects/"
+weight = 6
 
 [[footer]]
 name = "Publikációk"
-url = "publications/"
-weight = 5
+url = "/hu/publications/"
+weight = 7
 
 [[footer]]
 name = "Hírlevél"
 url = "https://yarnboundtales.substack.com/"
-weight = 6
+weight = 8
 
 [[footer]]
 name = "Adatkezelési tájékoztató"
-url = "privacy-policy/"
-weight = 7
+url = "/hu/privacy-policy/"
+weight = 9
 
 [[footer]]
 name = "Impresszum"
-url = "impressum/"
-weight = 8
+url = "/hu/impressum/"
+weight = 10
