--- a/hugo.toml
+++ b/hugo.toml
@@ -31,7 +31,7 @@ weight = 1
 languageName = "HU"
 languageCode = "hu-hu"
 contentDir = "content/hungarian"
-title = "Sárpátki Ádám - Műfordító, szerkesztő, lektor"
+title = "Sárpátki Ádám - Műfordító, szerkesztő, szaklektor"
 weight = 2
   [languages.hu.params]
     logo_text = "Sárpátki Ádám"
