--- a/hugo.toml
+++ b/hugo.toml
@@ -58,7 +58,7 @@ shortname = '' # we use disqus to show comments in blog posts . To install disqu
 
 ########################## Permalinks ############################
 [permalinks.page]
-"pages" = "/:slugorfilename/"
+"pages" = "/:slugorcontentbasename/"
 
 
 ############################# Modules ############################
