add youtube privacy settings

--- a/hugo.toml
+++ b/hugo.toml
@@ -154,6 +154,11 @@ baseName = "searchindex"
 isPlainText = true
 notAlternative = true
 
+############################# Privacy ##############################
+[privacy]
+  [privacy.youTube]
+    disable = false
+    privacyEnhanced = true
 
 ############################# Plugins ##############################
 
